# proteus

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
analysis/: README.md
analysis/applications/: run_gas_proteome_analysis.py
analysis/benchmarks/: run_nconf_ablation.py  run_proteus_evaluation.py  run_score_function_analysis.py
analysis/fold_switch/: run_confound_analysis.py  run_formulation_search.py  run_resolution_confound_combined.py  run_trajectory_analysis.py
analysis/validations/: run_aiupred_comparison.py  run_atlas_analysis.py  run_dibs_analysis.py  run_oc23_analysis.py  run_phospho_analysis.py
colab/: PROTEUS_Colab.ipynb
data/: README.md
notebooks/: quickstart.ipynb
proteus/: __init__.py  io.py  predictor.py  score.py  stats.py
proteus/adapters/: __init__.py  simplefold.py
proteus/data/: allostery_model.npz  proteome_scores.csv
proteus/embedding_extraction/: __init__.py  aggregators.py  downstream.py  extractor.py  pipeline.py  projectors.py
scripts/: extract_embeddings.py  score_proteins.py
simplefold_patch/: README.md  sampler.py
tests/: test_io.py  test_score.py
