[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "proteus-score"
version = "1.0.0"
description = "Zero-shot protein conformational flexibility from flow-matching trajectory displacement"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "TODO", email = "TODO" },
]
requires-python = ">=3.10"
keywords = ["protein", "conformational dynamics", "flow matching", "fold switching", "bioinformatics"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

# Core runtime dependencies — no GPU or large model weights required
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "tqdm",
]

[project.optional-dependencies]
# SimpleFold backend (Apple Inc., MIT License — installed separately)
simplefold = [
  "torch>=2.1",
  "einops",
  # SimpleFold itself must be installed from source; see README
]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
proteus-score   = "proteus.cli:score_cli"
proteus-extract = "proteus.cli:extract_cli"

[project.urls]
Homepage   = "https://github.com/TODO/proteus"
Paper      = "TODO"
Data       = "TODO_ZENODO"

[tool.setuptools.packages.find]
where = ["."]
include = ["proteus*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
