[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteus-score"
version = "1.0.0"
description = "PROtein TrajEctory Uncertainty Score - zero-shot conformational plasticity from flow-matching structure predictors"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Luiz Felipe Piochi" },
    { name = "Yasaman Karami", email = "yasaman.karami@inria.fr" },
    { name = "Hamed Khakzad",  email = "hamed.khakzad@inria.fr" },
]
keywords = [
    "protein-structure",
    "conformational-dynamics",
    "flow-matching",
    "structural-biology",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
simplefold = [
    "torch>=2.1",
    "einops>=0.7",
    "transformers>=4.40",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.urls]
Homepage  = "https://github.com/khakzad-lab/PROTEUS"
Paper     = "https://doi.org/TODO"
Zenodo    = "https://zenodo.org/record/TODO"

# Extraction and scoring are exposed as standalone scripts under ./scripts/
# rather than installed console entry points, since the extraction script
# requires SimpleFold to be on PYTHONPATH (and SimpleFold is not on PyPI).

[tool.setuptools.packages.find]
include = ["proteus*"]
exclude = ["tests*"]
